--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
 *.class
+AlogorithmsOfJava/AlogorithmsOfJava.iml
+AlogorithmsOfJava/.idea/checkstyle-idea.xml
+AlogorithmsOfJava/.idea/compiler.xml
+AlogorithmsOfJava/.idea/misc.xml
+AlogorithmsOfJava/.idea/modules.xml
+AlogorithmsOfJava/.idea/uiDesigner.xml
+AlogorithmsOfJava/.idea/vcs.xml
+AlogorithmsOfJava/.idea/inspectionProfiles/Project_Default.xml
